--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Core php Modular Pattern Boilerplate.",
     "require": {
         "php": "^8.2",
-        "google/apiclient": "^2.16"
+        "google/apiclient": "^2.16",
+        "vlucas/phpdotenv": "^5.6"
     },
     "authors": [
         {
